--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hi, I'm Jacopo.</h1>
+        <div class="card">
+            <h1>Hi, I'm Jacopo.</h1>
+            <p>Web Developer, Computer Engineering Student, productivity tools lover.</p>
+            <img src="assets/images/foto2.jpg" />
+        </div>
     </div>
     <!-- <script src="index.js"></script> -->
 </body>
