adding social svg

--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World!</title>
+    <title>Jacopo Mucci</title>
     <link rel="stylesheet" href="./styles/main.scss">
 </head>
 <body>
     <div class="container">
         <div class="card">
-            <h1>Hi, I'm Jacopo.</h1>
-            <p>Web Developer, Computer Engineering Student, productivity tools lover.</p>
-            <img src="assets/images/foto2.jpg" />
+            <img class="profile" src="assets/images/foto2.jpg" />
+            <h1>Jacopo Mucci</h1>
+            <p>Web Developer</p>
+            <div class="icons">
+                <span class="icon github-icon"></span>
+                <span class="icon linkedin-icon"></span>
+            </div>
+            <button>Contact Me</button>
         </div>
     </div>
     <!-- <script src="index.js"></script> -->
