--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jacopo Mucci</title>
-    <link rel="stylesheet" href="./styles/main.scss">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/main.scss" />
+  </head>
+  <body>
     <div class="container">
-        <div class="card">
-            <div class="card-body">
-                <img class="profile" src="assets/images/foto2.jpg" />
-                <h1>Jacopo Mucci</h1>
-                <p>Web Developer</p>
-                <div class="icons">
-                    <a href="https://github.com/muccijacopo"><i class="ti ti-github"></i></a>
-                    <a href="https://www.linkedin.com/in/jacopo-mucci-6b2a27141/"><i class="ti ti-linkedin"></i></a>
-                </div>
-                <button>Contact Me</button>
-            </div>
+      <div class="card">
+        <div class="card-body">
+          <img class="profile" src="assets/images/foto2.jpg" />
+          <h1>Jacopo Mucci</h1>
+          <p>Web Developer</p>
+          <div class="icons">
+            <a href="https://github.com/muccijacopo"
+              ><i class="ti ti-github"></i
+            ></a>
+            <a href="https://www.linkedin.com/in/jacopo-mucci-6b2a27141/"
+              ><i class="ti ti-linkedin"></i
+            ></a>
+          </div>
+          <button>
+            <a href="mailto:mucci.jacopo@gmail.com">Contact Me</a>
+          </button>
         </div>
+      </div>
     </div>
-</body>
+    <script src="app/app.js"></script>
+  </body>
 </html>
