--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,23 @@
       <div class="card">
         <div class="card-body">
           <img class="profile" src="assets/images/foto2.jpg" />
-          <h1>Jacopo Mucci</h1>
-          <p>Web Developer</p>
+          <h1>Hi, I'm Jacopo</h1>
+          <p>
+            I'm a software developer. Currently in love with Angular, React,
+            TypeScript, Python and all this web stuff.
+          </p>
+          <p>Let's keep in touch!</p>
           <div class="icons">
             <a href="https://github.com/muccijacopo"
               ><i class="ti ti-github"></i
             ></a>
             <a href="https://www.linkedin.com/in/jacopo-mucci-6b2a27141/"
-              ><i class="ti ti-linkedin"></i
+              ><i class="ti ti-linkedin" style="padding-bottom: 2px"></i
             ></a>
+            <a href="mailto:mucci.jacopo@gmail.com">
+              <i class="ti ti-email"></i>
+            </a>
           </div>
-          <button>
-            <a href="mailto:mucci.jacopo@gmail.com">Contact Me</a>
-          </button>
         </div>
       </div>
     </div>
