--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jacopo Mucci</title>
-    <link rel="stylesheet" href="./styles/main.scss" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="card">
-        <div class="card-body">
-          <img class="profile" src="assets/images/foto2.jpg" />
-          <h1>Hi, I'm Jacopo</h1>
-          <p>
-            I'm a software developer. Currently in love with Angular, React,
-            TypeScript, Python and all this web stuff.
-          </p>
-          <p>Let's keep in touch!</p>
-          <div class="icons">
-            <a href="https://github.com/muccijacopo"
-              ><i class="ti ti-github"></i
-            ></a>
-            <a href="https://www.linkedin.com/in/jacopo-mucci-6b2a27141/"
-              ><i class="ti ti-linkedin" style="padding-bottom: 2px"></i
-            ></a>
-            <a href="mailto:mucci.jacopo@gmail.com">
-              <i class="ti ti-email"></i>
-            </a>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jacopo Mucci</title>
+  <link rel="stylesheet" href="./styles/main.scss" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="card">
+      <div class="card-body">
+        <img class="profile" src="assets/images/foto2.jpg" />
+        <h1>Hi, I'm Jacopo</h1>
+        <p>
+          I'm a full stack developer. Currently working on Angular/Node/Mongo stack.
+          
+        </p>
+        <p>Let's keep in touch!</p>
+        <div class="icons">
+          <a href="https://www.linkedin.com/in/muccijacopo">
+            <span class="ti ti-linkedin"
+              style="padding-bottom: 2px"></span></a>
+          <!-- <a href="https://github.com/muccijacopo">
+            <span class="ti ti-github"></span></a> -->
+          <!-- <a href="mailto:mucci.jacopo@gmail.com">
+            <span class="ti ti-email"></span>
+          </a> -->
         </div>
       </div>
     </div>
-    <script src="app/app.js"></script>
-  </body>
+  </div>
+  <script src="app/app.js"></script>
+</body>
+
 </html>
